--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         class="nav__cta type-label-lg"
                         href="#"
                         target="_blank"
-                        >Submit Record</a
+                        >Thanks for playing the List</a
                     >
                 </div>
             </nav>
