--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://www.youtube.com/channel/UCNfPu7THXiGzpK4FCcKJJQw"
                         target="_blank"
-                        >Thanks for playing the List</a
+                        >Youtube Channel</a
                     >
                 </div>
             </nav>
