--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="/css/typography.css" />
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         <link rel="stylesheet" type="text/css" href="/css/pages/list.css" />
+        <link rel="stylesheet" type="text/css" href="/css/pages/list-packs.css" />
         <link
             rel="stylesheet"
             type="text/css"
@@ -38,7 +39,7 @@
         <header :class="{ dark: store.dark }">
             <div class="logo">
                 <h2>TCL</h2>
-                <p>v1.0.0</p>
+                <p>v1.1.0</p>
             </div>
             <nav class="nav">
                 <router-link class="nav__tab" to="/">
@@ -50,6 +51,9 @@
                 <router-link class="nav__tab" to="/roulette">
                     <span class="type-label-lg">Roulette</span>
                 </router-link>
+                <router-link class="nav__tab" to="/listpacks">
+                    <span class="type-label-lg">Packs</span>
+                </router-link>
                 <div class="nav__actions">
                     <button
                         class="nav__icon"
@@ -60,7 +64,7 @@
                             alt=""
                         />
                     </button>
-                    <!-- Replace the '#' with your discord server's invite-->
+                     <!-- Replace the '#' with your discord server's invite-->
                     <a class="nav__icon" href="https://discord.gg/tDHWDauMTZ">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
